silly-app/overlays/dev/traefik-mdw-redirecttohttps.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecttohttps
  namespace: silly-app
spec:
  redirectScheme:
    scheme: https
