silly-app/overlays/dev/traefik-mdw-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: silly-app
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /silly-app
